# bayestidy

./: CLAUDE.md  README.md  README.qmd  notebook.md  notebook.qmd  pyproject.toml
src/bayestidy/: __init__.py  geoms.py  point_interval.py  tidy_draws.py
tests/: test_geoms.py  test_point_interval.py  test_tidy_draws.py
