[project]
name = "bayestidy"
version = "0.1.0"
description = "Tidy data extraction and summaries for Bayesian models in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.17.0",
    "numpy>=1.24.0",
    "polars>=1.0.0",
    "pyarrow>=23.0.1",
    "xarray>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pymc>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayestidy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
